--- a/app/views/decoder/edit.html.erb
+++ b/app/views/decoder/edit.html.erb
@@ -5,6 +5,8 @@
         <div class="data-field">
           <%= f.label "Year: " %>
           <%= f.text_area :year %>
+          <%= f.label "Make: " %>
+          <%= f.text_area :make %> 
         </div>
 
         <%= f.submit "Add" %>
